feat: optimize Web Development Services page with expanded content, schema, and i18n

--- a/src/i18n/ar/local-seo.json
+++ b/src/i18n/ar/local-seo.json
@@ -1,13 +1,58 @@
 {
-  "localSeoTitle": "خدمات تحسين محركات البحث المحلي",
-  "localSeoDescription": "اجعل العملاء في منطقتك يعثرون عليك من خلال خدمات تحسين محركات البحث المحلي المتخصصة لدينا.",
-  "feature": {
-    "gmb": "تحسين ملف جوجل للأعمال",
-    "localKeywords": "استهداف الكلمات المفتاحية المحلية",
-    "nearMe": "التحسين لعمليات البحث \"القريبة مني\"",
-    "localLinks": "بناء الروابط المحلية",
-    "reviews": "إدارة المراجعات",
-    "localReports": "تقارير تحسين محركات البحث المحلي"
+  "localSeoTitle": "خدمات السيو المحلي (Local SEO) | تصدر نتائج خرائط جوجل واجذب عملاء منطقتك",
+  "localSeoDescription": "ضاعف مبيعاتك من خلال الظهور لعملائك القريبين. خدمات سئو محلي متكاملة من WebABC لتصدر خرائط جوجل والبحث المحلي. احصل على استشارة مجانية الآن!",
+  "whatIs": {
+    "title": "ما هو تحسين محركات البحث المحلي؟",
+    "p1": "تحسين محركات البحث المحلي (Local SEO) هو استراتيجية لتحسين محركات البحث تساعد عملك على أن يكون أكثر وضوحًا في نتائج البحث المحلية على Google. يمكن لأي نشاط تجاري له موقع فعلي أو يخدم منطقة جغرافية معينة الاستفادة من تحسين محركات البحث المحلي.",
+    "p2": "عندما يبحث العملاء المحتملون عن خدمات 'بالقرب مني' أو في مدينتهم، يضمن تحسين محركات البحث المحلي ظهور عملك في أعلى النتائج، بما في ذلك حزمة خرائط Google. الأمر يتعلق بالتواصل مع العملاء المستعدين للشراء في منطقتك."
   },
-  "keywords": "سئو محلي, جوجل للأعمال, قريب مني, خدمات سئو"
+  "features": {
+    "title": "ميزات تحسين محركات البحث المحلي لدينا"
+  },
+  "feature": {
+    "gmb": "ملف النشاط التجاري على Google",
+    "gmbDesc": "تحسين كامل لملف نشاطك التجاري على Google (المعروف سابقًا باسم GMB) لزيادة الظهور في الخرائط والبحث المحلي.",
+    "localKeywords": "استهداف الكلمات الرئيسية المحلية",
+    "localKeywordsDesc": "البحث واستهداف الكلمات الرئيسية ذات النية العالية الخاصة بمدينتك ومنطقة خدمتك.",
+    "nearMe": "تحسين 'بالقرب مني'",
+    "nearMeDesc": "استراتيجيات لجذب الزيارات من المستخدمين الذين يبحثون عن حلول فورية في مكان قريب.",
+    "localLinks": "بناء الروابط المحلية",
+    "localLinksDesc": "الحصول على روابط خلفية عالية الجودة من الدلائل المحلية ذات السمعة الطيبة ومواقع المجتمع.",
+    "reviews": "إدارة المراجعات",
+    "reviewsDesc": "استراتيجييات لتوليد المزيد من المراجعات الإيجابية وإدارة سمعتك عبر الإنترنت.",
+    "localReports": "تقارير الأداء المحلي",
+    "localReportsDesc": "تقارير شهرية مفصلة تتبع تصنيفاتك المحلية والمكالمات وطلبات الاتجاهات."
+  },
+  "process": {
+    "title": "عملية تحسين محركات البحث المحلي لدينا",
+    "description": "نحن نتبع نهجًا مثبتًا يعتمد على البيانات لتحسين تصنيفاتك المحلية.",
+    "step1": {
+      "title": "التدقيق المحلي",
+      "desc": "نقوم بتحليل تواجدك المحلي الحالي والمنافسين والفرص."
+    },
+    "step2": {
+      "title": "تطوير الاستراتيجية",
+      "desc": "إنشاء خطة مخصصة تستهدف موقعك وصناعتك المحددة."
+    },
+    "step3": {
+      "title": "التحسين والاستشهاد",
+      "desc": "تحسين موقع الويب الخاص بك و GMB وبناء استشهادات NAP متسقة."
+    },
+    "step4": {
+      "title": "المراقبة والنمو",
+      "desc": "التتبع والتعديل المستمر لضمان استمرار التصنيفات العليا."
+    }
+  },
+  "faq": {
+    "title": "أسئلة مكررة",
+    "description": "أسئلة شائعة حول خدمات تحسين محركات البحث المحلي لدينا.",
+    "q1": "كم من الوقت يستغرق رؤية نتائج تحسين محركات البحث المحلي؟",
+    "a1": "عادةً ما يمكنك البدء في رؤية التحسينات الأولية في غضون 3-4 أشهر، ونتائج مهمة في 6-12 شهرًا، اعتمادًا على المنافسة.",
+    "q2": "هل أحتاج إلى عنوان فعلي لتحسين محركات البحث المحلي؟",
+    "a2": "من الناحية المثالية نعم، ولكن يمكن للشركات التي تقدم خدمات في مناطق معينة (SAB) مثل السباكين أو الكهربائيين التصنيف أيضًا دون إظهار عنوانهم علنًا.",
+    "q3": "ما هي حزمة خرائط Google؟",
+    "a3": "إنها كتلة من ثلاث قوائم تجارية تظهر أسفل الخريطة في نتائج بحث Google. إنها العقارات الأكثر قيمة للشركات المحلية.",
+    "q4": "كيف تؤثر المراجعات على تصنيفي؟",
+    "a4": "المراجعات هي عامل تصنيف رئيسي. الكمية والجودة وحداثة المراجعات كلها تشير إلى الثقة والسلطة لـ Google."
+  }
 }
