--- a/src/i18n/ar/web-development-services.json
+++ b/src/i18n/ar/web-development-services.json
@@ -1,26 +1,72 @@
-{
-  "title": "خدمات تطوير الويب",
-  "subtitle": "حلول تطوير ويب مخصصة",
-  "webDevelopmentTitle": "خدمات تطوير الويب",
-  "webDevelopmentDescription": "نقدم خدمات تطوير ويب شاملة لتحويل أفكارك إلى واقع.",
-  "ourServices": "خدماتنا",
-  "frontendDev": "تطوير الواجهة الأمامية (Frontend)",
-  "frontendDesc": "نقوم ببناء واجهات مستخدم جميلة ومتجاوبة.",
-  "backendDev": "تطوير الواجهة الخلفية (Backend)",
-  "backendDesc": "نقوم بتطوير أنظمة خلفية قوية وقابلة للتوسع.",
+  "backendDesc": "نحن نطور أنظمة خلفية قوية وقابلة للتطوير.",
   "feature": {
-    "uiuxDesign": "تصميم واجهة وتجربة المستخدم",
+    "uiuxDesign": "تصميم UI/UX",
     "reactNextjs": "تطوير React و Next.js",
     "responsiveDesign": "تصميم متجاوب",
     "webVitals": "تحسين مؤشرات الويب الحيوية",
     "animations": "الرسوم المتحركة والتفاعلات",
-    "apiIntegration": "تكامل واجهة برمجة التطبيقات (API)",
+    "apiIntegration": "تكامل API",
     "restApi": "تطوير REST API",
-    "python": "تطوير بايثون",
+    "python": "تطوير Python",
     "nodejs": "تطوير Node.js",
     "database": "تصميم وإدارة قواعد البيانات",
-    "auth": "المصادقة والترخيص",
+    "auth": "المصادقة والتفويض",
     "cloudIntegration": "التكامل السحابي"
   },
-  "keywords": "تطوير الويب, خدمات, react, nextjs"
+  "whatIs": {
+    "title": "ما هو تطوير الويب المخصص؟",
+    "p1": "تطوير الويب المخصص هو عملية بناء موقع ويب أو تطبيق ويب فريد مصمم خصيصًا لاحتياجات عملك وهويتك التجارية وأهدافك. على عكس الحلول القائمة على القوالب، يوفر التطوير المخصص المرونة وقابلية التوسع والأداء العالي.",
+    "p2": "نحن متخصصون في إنشاء حلول رقمية مخصصة باستخدام تقنيات حديثة مثل React و Next.js و Node.js. سواء كنت بحاجة إلى منصة مؤسسية معقدة، أو موقع تجارة إلكترونية ديناميكي، أو صفحة هبوط عالية التحويل، يقدم فريقنا كودًا نظيفًا وآمنًا ومحسنًا للنمو."
+  },
+  "technologies": {
+    "title": "التقنيات التي نستخدمها",
+    "description": "نحن نستفيد من أحدث التقنيات وأكثرها موثوقية لبناء تطبيقات مستقبلية.",
+    "frontend": "الواجهة الأمامية",
+    "backend": "الواجهة الخلفية",
+    "database": "قاعدة البيانات",
+    "devops": "DevOps"
+  },
+  "industries": {
+    "title": "الصناعات التي نخدمها",
+    "description": "لدينا خبرة في تقديم مشاريع ناجحة عبر مختلف الصناعات.",
+    "ecommerce": "التجارة الإلكترونية",
+    "healthcare": "الرعاية الصحية",
+    "fintech": "التكنولوجيا المالية",
+    "education": "التعليم",
+    "realEstate": "العقارات",
+    "travel": "السفر والسياحة"
+  },
+  "process": {
+    "title": "عملية التطوير لدينا",
+    "description": "نحن نتبع منهجية رشيقة (Agile) لضمان الشفافية والجودة والتسليم في الوقت المناسب.",
+    "step1": {
+      "title": "الاكتشاف والتخطيط",
+      "desc": "نبدأ بفهم متطلباتك وجمهورك المستهدف وأهداف عملك لإنشاء خارطة طريق مفصلة."
+    },
+    "step2": {
+      "title": "التصميم والنمذجة",
+      "desc": "يقوم مصممونا بإنشاء إطارات سلكية UI/UX بديهية ونماذج عالية الدقة لموافقتك."
+    },
+    "step3": {
+      "title": "التطوير والاختبار",
+      "desc": "يكتب مطورونا كودًا نظيفًا وفعالًا أثناء إجراء اختبارات صارمة لضمان تجربة خالية من الأخطاء."
+    },
+    "step4": {
+      "title": "النشر والدعم",
+      "desc": "نطلق تطبيقك ونقدم صيانة ودعمًا مستمرين لضمان تشغيله بسلاسة."
+    }
+  },
+  "faq": {
+    "title": "أسئلة مكررة",
+    "description": "أسئلة شائعة حول خدمات تطوير الويب لدينا.",
+    "q1": "ما هي التقنيات التي تستخدمونها؟",
+    "a1": "نحن نستخدم بشكل أساسي مكدس MERN (MongoDB, Express, React, Node.js) و Next.js للواجهة الأمامية، جنبًا إلى جنب مع Python (Django/Flask) لاحتياجات الواجهة الخلفية.",
+    "q2": "كم من الوقت يستغرق بناء موقع ويب؟",
+    "a2": "يختلف الجدول الزمني بناءً على التعقيد. قد يستغرق موقع الكتيب البسيط 2-4 أسابيع، بينما قد يستغرق تطبيق الويب المعقد 3-6 أشهر.",
+    "q3": "هل تقدمون صيانة بعد الإطلاق؟",
+    "a3": "نعم، نحن نقدم باقات صيانة متنوعة لضمان بقاء موقع الويب الخاص بك آمنًا ومحدثًا ويعمل بشكل مثالي.",
+    "q4": "هل سيكون موقع الويب الخاص بي متوافقًا مع الأجهزة المحمولة؟",
+    "a4": "بالتأكيد. تم تصميم جميع مواقعنا الإلكترونية بنهج الجوال أولاً، مما يضمن أنها تبدو وتعمل بشكل مثالي على جميع الأجهزة."
+  },
+  "keywords": "خدمات تطوير الويب, تطبيقات ويب مخصصة, تطوير react, خبراء next.js, مطوري node.js"
 }
