--- a/src/i18n/fa/local-seo.json
+++ b/src/i18n/fa/local-seo.json
@@ -1,13 +1,58 @@
 {
-  "localSeoTitle": "خدمات سئو محلی",
-  "localSeoDescription": "با خدمات تخصصی سئو محلی ما، توسط مشتریان در منطقه خود دیده شوید.",
-  "feature": {
-    "gmb": "بهینه‌سازی پروفایل کسب‌وکار گوگل",
-    "localKeywords": "هدف‌گذاری کلمات کلیدی محلی",
-    "nearMe": "بهینه‌سازی برای جستجوهای «نزدیک من»",
-    "localLinks": "لینک‌سازی محلی",
-    "reviews": "مدیریت نظرات",
-    "localReports": "گزارش‌دهی سئو محلی"
+  "localSeoTitle": "خدمات سئو محلی (Local SEO) | رتبه اول گوگل مپ و جذب مشتری بومی",
+  "localSeoDescription": "با استراتژی‌های سئو محلی WebABC، مشتریان اطراف خود را جذب کنید. افزایش ورودی گوگل مپ، ثبت در نقشه و تسلط بر بازار محلی. همین حالا برای مشاوره رایگان تماس بگیرید!",
+  "whatIs": {
+    "title": "سئو محلی چیست؟",
+    "p1": "سئو محلی (Local SEO) یک استراتژی بهینه‌سازی موتور جستجو است که به کسب‌وکار شما کمک می‌کند تا در نتایج جستجوی محلی گوگل بیشتر دیده شود. هر کسب‌وکاری که مکان فیزیکی دارد یا به یک منطقه جغرافیایی خاص خدمات می‌دهد، می‌تواند از سئو محلی بهره‌مند شود.",
+    "p2": "وقتی مشتریان بالقوه برای خدمات 'نزدیک من' یا در شهر خود جستجو می‌کنند، سئو محلی تضمین می‌کند که کسب‌وکار شما در صدر نتایج، از جمله در بسته نقشه گوگل (Google Map Pack)، ظاهر شود. این یعنی ارتباط با مشتریانی که در منطقه شما آماده خرید هستند."
   },
-  "keywords": "سئو محلی, گوگل بیزینس, نزدیک من, خدمات سئو"
+  "features": {
+    "title": "ویژگی‌های سئو محلی ما"
+  },
+  "feature": {
+    "gmb": "پروفایل کسب‌وکار گوگل",
+    "gmbDesc": "بهینه‌سازی کامل پروفایل کسب‌وکار گوگل (Google Business Profile) برای حداکثر دیده شدن در نقشه‌ها و جستجوی محلی.",
+    "localKeywords": "هدف‌گذاری کلمات کلیدی محلی",
+    "localKeywordsDesc": "تحقیق و هدف‌گذاری کلمات کلیدی با نیت بالا که مختص شهر و منطقه خدمات شما هستند.",
+    "nearMe": "بهینه‌سازی 'نزدیک من'",
+    "nearMeDesc": "استراتژی‌هایی برای جذب ترافیک از کاربرانی که به دنبال راه‌حل‌های فوری در نزدیکی خود هستند.",
+    "localLinks": "لینک‌سازی محلی",
+    "localLinksDesc": "کسب بک‌لینک‌های باکیفیت از دایرکتوری‌های معتبر محلی و وب‌سایت‌های اجتماعی.",
+    "reviews": "مدیریت نظرات",
+    "reviewsDesc": "استراتژی‌هایی برای ایجاد نظرات مثبت بیشتر و مدیریت شهرت آنلاین شما.",
+    "localReports": "گزارش‌دهی عملکرد محلی",
+    "localReportsDesc": "گزارش‌های ماهانه دقیق که رتبه‌بندی‌های محلی، تماس‌ها و درخواست‌های مسیریابی شما را ردیابی می‌کند."
+  },
+  "process": {
+    "title": "فرآیند سئو محلی ما",
+    "description": "ما از یک رویکرد اثبات‌شده و مبتنی بر داده برای بهبود رتبه‌بندی محلی شما پیروی می‌کنیم.",
+    "step1": {
+      "title": "ممیزی محلی",
+      "desc": "ما حضور فعلی محلی، رقبا و فرصت‌های شما را تجزیه و تحلیل می‌کنیم."
+    },
+    "step2": {
+      "title": "توسعه استراتژی",
+      "desc": "ایجاد یک برنامه سفارشی که مکان و صنعت خاص شما را هدف قرار می‌دهد."
+    },
+    "step3": {
+      "title": "بهینه‌سازی و استناد",
+      "desc": "بهینه‌سازی وب‌سایت، GMB و ایجاد استنادات NAP سازگار."
+    },
+    "step4": {
+      "title": "نظارت و رشد",
+      "desc": "ردیابی و تنظیم مداوم برای اطمینان از حفظ رتبه‌های برتر."
+    }
+  },
+  "faq": {
+    "title": "سوالات متداول",
+    "description": "سوالات رایج در مورد خدمات سئو محلی ما.",
+    "q1": "چقدر طول می‌کشد تا نتایج سئو محلی را ببینیم؟",
+    "a1": "معمولاً می‌توانید بهبودهای اولیه را در ۳-۴ ماه ببینید، و نتایج قابل توجه در ۶-۱۲ ماه، بسته به رقابت.",
+    "q2": "آیا برای سئو محلی به آدرس فیزیکی نیاز دارم؟",
+    "a2": "ایده‌آل بله، اما کسب‌وکارهای خدماتی (SAB) مانند لوله‌کش‌ها یا برق‌کارها نیز می‌توانند بدون نمایش عمومی آدرس خود رتبه بگیرند.",
+    "q3": "بسته نقشه گوگل (Google Map Pack) چیست؟",
+    "a3": "این بلوک سه تایی از لیست‌های کسب‌وکار است که در زیر نقشه در نتایج جستجوی گوگل ظاهر می‌شود. این ارزشمندترین مکان برای کسب‌وکارهای محلی است.",
+    "q4": "نظرات چگونه بر رتبه من تأثیر می‌گذارند؟",
+    "a4": "نظرات یک فاکتور اصلی رتبه‌بندی هستند. کمیت، کیفیت و تازگی نظرات همگی به گوگل سیگنال اعتماد و اعتبار می‌دهند."
+  }
 }
