--- a/src/i18n/fa/web-development-services.json
+++ b/src/i18n/fa/web-development-services.json
@@ -1,17 +1,8 @@
-{
-  "title": "خدمات توسعه وب",
-  "subtitle": "راهکارهای سفارشی توسعه وب",
-  "webDevelopmentTitle": "خدمات توسعه وب",
-  "webDevelopmentDescription": "ما خدمات جامع توسعه وب را برای به واقعیت پیوستن ایده‌های شما ارائه می‌دهیم.",
-  "ourServices": "خدمات ما",
-  "frontendDev": "توسعه فرانت‌اند",
-  "frontendDesc": "ما رابط‌های کاربری زیبا و واکنش‌گرا می‌سازیم.",
-  "backendDev": "توسعه بک‌اند",
-  "backendDesc": "ما سیستم‌های بک‌اند قوی و مقیاس‌پذیر توسعه می‌دهیم.",
+  "backendDesc": "ما سیستم‌های بک‌اند قدرتمند و مقیاس‌پذیر توسعه می‌دهیم.",
   "feature": {
     "uiuxDesign": "طراحی UI/UX",
-    "reactNextjs": "توسعه با React و Next.js",
-    "responsiveDesign": "طراحی واکنش‌گرا",
+    "reactNextjs": "توسعه React و Next.js",
+    "responsiveDesign": "طراحی واکنش‌گرا (Responsive)",
     "webVitals": "بهینه‌سازی Web Vitals",
     "animations": "انیمیشن‌ها و تعاملات",
     "apiIntegration": "یکپارچه‌سازی API",
@@ -19,8 +10,63 @@
     "python": "توسعه پایتون",
     "nodejs": "توسعه Node.js",
     "database": "طراحی و مدیریت دیتابیس",
-    "auth": "احراز هویت و مجوزدهی",
+    "auth": "احراز هویت و مجوزها",
     "cloudIntegration": "یکپارچه‌سازی ابری"
   },
-  "keywords": "توسعه وب, خدمات, react, nextjs"
+  "whatIs": {
+    "title": "توسعه وب اختصاصی چیست؟",
+    "p1": "توسعه وب اختصاصی فرآیند ساخت یک وب‌سایت یا وب‌اپلیکیشن منحصر به فرد است که دقیقاً متناسب با نیازهای کسب‌وکار، هویت برند و اهداف شما طراحی شده است. برخلاف راه‌حل‌های مبتنی بر قالب، توسعه اختصاصی انعطاف‌پذیری، مقیاس‌پذیری و عملکرد بالاتری را ارائه می‌دهد.",
+    "p2": "ما در ایجاد راهکارهای دیجیتال سفارشی با استفاده از تکنولوژی‌های مدرن مانند React، Next.js و Node.js تخصص داریم. چه به یک پلتفرم سازمانی پیچیده نیاز داشته باشید، چه یک سایت فروشگاهی پویا یا یک لندینگ پیج با نرخ تبدیل بالا، تیم ما کدی تمیز، امن و بهینه برای رشد ارائه می‌دهد."
+  },
+  "technologies": {
+    "title": "تکنولوژی‌های مورد استفاده ما",
+    "description": "ما از جدیدترین و قابل اعتمادترین تکنولوژی‌ها برای ساخت اپلیکیشن‌های آینده‌نگر استفاده می‌کنیم.",
+    "frontend": "فرانت‌اند",
+    "backend": "بک‌اند",
+    "database": "پایگاه داده",
+    "devops": "دواپس (DevOps)"
+  },
+  "industries": {
+    "title": "صنایعی که به آن‌ها خدمت می‌کنیم",
+    "description": "ما تجربه ارائه پروژه‌های موفق در صنایع مختلف را داریم.",
+    "ecommerce": "تجارت الکترونیک",
+    "healthcare": "بهداشت و درمان",
+    "fintech": "فین‌تک (Fintech)",
+    "education": "آموزش",
+    "realEstate": "املاک و مستغلات",
+    "travel": "سفر و گردشگری"
+  },
+  "process": {
+    "title": "فرآیند توسعه ما",
+    "description": "ما از متدولوژی چابک (Agile) برای اطمینان از شفافیت، کیفیت و تحویل به موقع پیروی می‌کنیم.",
+    "step1": {
+      "title": "کشف و برنامه‌ریزی",
+      "desc": "ما با درک نیازها، مخاطبان هدف و اهداف تجاری شما برای ایجاد یک نقشه راه دقیق شروع می‌کنیم."
+    },
+    "step2": {
+      "title": "طراحی و نمونه‌سازی",
+      "desc": "طراحان ما وایرفریم‌های UI/UX بصری و موکاپ‌های با کیفیت بالا را برای تایید شما ایجاد می‌کنند."
+    },
+    "step3": {
+      "title": "توسعه و تست",
+      "desc": "توسعه‌دهندگان ما کد تمیز و کارآمد می‌نویسند و همزمان تست‌های دقیقی را برای اطمینان از تجربه بدون باگ انجام می‌دهند."
+    },
+    "step4": {
+      "title": "استقرار و پشتیبانی",
+      "desc": "ما اپلیکیشن شما را راه‌اندازی می‌کنیم و نگهداری و پشتیبانی مداوم را برای اطمینان از عملکرد روان آن ارائه می‌دهیم."
+    }
+  },
+  "faq": {
+    "title": "سوالات متداول",
+    "description": "سوالات رایج در مورد خدمات توسعه وب ما.",
+    "q1": "از چه تکنولوژی‌هایی استفاده می‌کنید؟",
+    "a1": "ما عمدتاً از استک MERN (MongoDB, Express, React, Node.js) و Next.js برای فرانت‌اند، به همراه پایتون (Django/Flask) برای نیازهای بک‌اند استفاده می‌کنیم.",
+    "q2": "ساخت یک وب‌سایت چقدر طول می‌کشد؟",
+    "a2": "زمان‌بندی بسته به پیچیدگی متفاوت است. یک سایت معرفی ساده ممکن است ۲-۴ هفته طول بکشد، در حالی که یک وب‌اپلیکیشن پیچیده ممکن است ۳-۶ ماه زمان ببرد.",
+    "q3": "آیا پس از راه‌اندازی پشتیبانی ارائه می‌دهید؟",
+    "a3": "بله، ما بسته‌های نگهداری مختلفی را ارائه می‌دهیم تا اطمینان حاصل کنیم که وب‌سایت شما امن، به‌روز و با عملکرد بهینه باقی می‌ماند.",
+    "q4": "آیا وب‌سایت من با موبایل سازگار خواهد بود؟",
+    "a4": "قطعاً. تمام وب‌سایت‌های ما با رویکرد موبایل-اول (Mobile-First) طراحی می‌شوند تا اطمینان حاصل شود که در همه دستگاه‌ها عالی به نظر می‌رسند و کار می‌کنند."
+  },
+  "keywords": "خدمات توسعه وب, طراحی سایت اختصاصی, برنامه نویسی react, متخصص next.js, توسعه دهنده node.js"
 }
