feat: improve FAQ component UI/UX and integrate into SEO Services page

--- a/src/i18n/ar/web-development-services.json
+++ b/src/i18n/ar/web-development-services.json
@@ -1,3 +1,12 @@
+{
+  "title": "خدمات تطوير الويب المخصصة | خبراء React و Next.js و Python",
+  "subtitle": "سرّع نمو عملك مع تطبيقات ويب عالية الأداء وقابلة للتطوير. حلول مخصصة باستخدام React و Next.js. احصل على استشارة مجانية الآن!",
+  "webDevelopmentTitle": "خدمات تطوير الويب",
+  "webDevelopmentDescription": "نحن نقدم خدمات تطوير ويب شاملة لتحقيق أفكارك على أرض الواقع.",
+  "ourServices": "خدماتنا",
+  "frontendDev": "تطوير الواجهة الأمامية",
+  "frontendDesc": "نحن نبني واجهات مستخدم جميلة وسريعة الاستجابة.",
+  "backendDev": "تطوير الواجهة الخلفية",
   "backendDesc": "نحن نطور أنظمة خلفية قوية وقابلة للتطوير.",
   "feature": {
     "uiuxDesign": "تصميم UI/UX",
