--- a/src/i18n/fa/web-development-services.json
+++ b/src/i18n/fa/web-development-services.json
@@ -1,3 +1,12 @@
+{
+  "title": "خدمات توسعه وب اختصاصی | متخصصین React، Next.js و پایتون",
+  "subtitle": "رشد کسب‌وکار خود را با وب‌اپلیکیشن‌های سریع و مقیاس‌پذیر شتاب دهید. طراحی و توسعه حرفه‌ای سایت با React و Next.js. همین حالا مشاوره رایگان بگیرید!",
+  "webDevelopmentTitle": "خدمات توسعه وب",
+  "webDevelopmentDescription": "ما خدمات جامع توسعه وب را برای تحقق بخشیدن به ایده‌های شما ارائه می‌دهیم.",
+  "ourServices": "خدمات ما",
+  "frontendDev": "توسعه فرانت‌اند",
+  "frontendDesc": "ما رابط‌های کاربری زیبا و واکنش‌گرا می‌سازیم.",
+  "backendDev": "توسعه بک‌اند",
   "backendDesc": "ما سیستم‌های بک‌اند قدرتمند و مقیاس‌پذیر توسعه می‌دهیم.",
   "feature": {
     "uiuxDesign": "طراحی UI/UX",
