Fix: Resolve translation errors and missing keys

--- a/src/i18n/ar/portfolio.json
+++ b/src/i18n/ar/portfolio.json
@@ -4,6 +4,7 @@
   "allProjects": "جميع المشاريع",
   "webDesign": "تصميم الويب",
   "ecommerce": "التجارة الإلكترونية",
+  "localSeo": "تحسين محركات البحث المحلية",
   "seoProjects": "مشاريع تحسين محركات البحث",
   "mobileApps": "تطبيقات الجوال",
   "client": "العميل",
