--- a/src/i18n/ar/services.json
+++ b/src/i18n/ar/services.json
@@ -8,6 +8,7 @@
   "sectionDescription": "نقدم خدمات شاملة في تحسين محركات البحث وتطوير الويب لمساعدة عملك على النجاح عبر الإنترنت. جميع خدماتنا مصممة وفقًا لأحدث المعايير العالمية ومخصصة للاحتياجات المحددة للسوق.",
   "title": "خدمات احترافية في تحسين محركات البحث وتطوير الويب",
   "description": "حلول تسويق رقمي شاملة لنمو أعمالك. باستخدام أحدث التقنيات والأساليب المتقدمة، نحول موقعك إلى أداة قوية لجذب العملاء.",
+  "subtitle": "حلول شاملة في التسويق الرقمي",
   "wordpress": {
     "title": "تطوير ووردبريس",
     "subtitle": "تصميم وتطوير احترافي لمواقع ووردبريس، مخصصة لاحتياجات عملك",
