--- a/src/i18n/en/portfolio.json
+++ b/src/i18n/en/portfolio.json
@@ -4,6 +4,7 @@
   "allProjects": "All Projects",
   "webDesign": "Web Design",
   "ecommerce": "E-commerce",
+  "localSeo": "Local SEO",
   "seoProjects": "SEO Projects",
   "mobileApps": "Mobile Apps",
   "client": "Client",
