--- a/src/i18n/en/services.json
+++ b/src/i18n/en/services.json
@@ -1,4 +1,3 @@
-
 {
   "sectionTag": "Our Services",
   "sectionTitle": {
@@ -9,6 +8,7 @@
   "sectionDescription": "We provide comprehensive SEO and web development services to help your business succeed online. All our services are designed according to the latest global standards and customized for the specific needs of the market.",
   "title": "Professional SEO and Web Development Services",
   "description": "Comprehensive digital marketing solutions for your business growth. Using the latest technologies and advanced techniques, we turn your website into a powerful tool for attracting customers.",
+  "subtitle": "Comprehensive Digital Marketing Solutions",
   "seo": {
     "title": "SEO & Specialized Optimization",
     "description": "Improve your website ranking in search engines using standard SEO techniques.",
