--- a/src/i18n/fa/portfolio.json
+++ b/src/i18n/fa/portfolio.json
@@ -4,6 +4,7 @@
   "allProjects": "همه پروژه‌ها",
   "webDesign": "طراحی وب",
   "ecommerce": "فروشگاه آنلاین",
+  "localSeo": "سئو محلی",
   "seoProjects": "پروژه‌های سئو",
   "mobileApps": "اپلیکیشن‌های موبایل",
   "client": "مشتری",
