--- a/src/i18n/fa/services.json
+++ b/src/i18n/fa/services.json
@@ -8,6 +8,7 @@
   "sectionDescription": "ما خدمات جامع سئو و توسعه وب را برای کمک به موفقیت آنلاین کسب و کار شما ارائه می‌دهیم. تمام خدمات ما طبق آخرین استانداردهای جهانی طراحی شده و برای نیازهای خاص بازار سفارشی‌سازی شده‌اند.",
   "title": "خدمات حرفه‌ای سئو و توسعه وب",
   "description": "راهکارهای جامع دیجیتال مارکتینگ برای رشد کسب و کار شما. با استفاده از آخرین فناوری‌ها و تکنیک‌های پیشرفته، وب‌سایت شما را به ابزاری قدرتمند برای جذب مشتری تبدیل می‌کنیم.",
+  "subtitle": "راهکارهای جامع دیجیتال مارکتینگ",
   "wordpress": {
     "title": "توسعه وردپرس",
     "subtitle": "طراحی و توسعه حرفه‌ای وب‌سایت‌های وردپرس، سفارشی شده برای نیازهای کسب و کار شما",
