fix: remove deprecated resources/case-studies, fix translation keys and footer links

--- a/src/i18n/ar/tools.json
+++ b/src/i18n/ar/tools.json
@@ -20,6 +20,14 @@
     "title": "منشئ روابط UTM",
     "description": "نموذج يساعد المسوقين في إنشاء روابط تحتوي على معلمات UTM لتتبع حملاتهم في جوجل أناليتيكس."
   },
+  "keywordResearch": {
+    "title": "أداة البحث عن الكلمات الرئيسية",
+    "description": "اكتشف الكلمات الرئيسية ذات القيمة العالية لاستراتيجية تحسين محركات البحث الخاصة بك."
+  },
+  "faqGenerator": {
+    "title": "منشئ مخطط الأسئلة الشائعة",
+    "description": "قم بإنشاء ترميز مخطط صفحة الأسئلة الشائعة لتحسين ظهورك في البحث."
+  },
   "contentCreatorsTitle": "✍️ لمنشئي المحتوى",
   "contentCreatorsDesc": "يمكن للأدوات المتخصصة في المحتوى مساعدة زوارك في إنشاء محتوى أفضل ورؤية نفسك كمورد قيم.",
   "headlineAnalyzer": {
