--- a/src/i18n/fa/tools.json
+++ b/src/i18n/fa/tools.json
@@ -18,7 +18,15 @@
   },
   "utmBuilder": {
     "title": "سازنده لینک UTM",
-    "description": "فرمی که به بازاریابان کمک می‌کند لینک‌هایی با پارامترهای UTM برای ردیابی کمپین‌های خود در گوگل آنالیتیکس ایجاد کنند."
+    "description": "فرمی که به بازاریابان کمک می‌کند آدرس‌های URL با پارامترهای UTM برای ردیابی کمپین‌های خود در Google Analytics بسازند."
+  },
+  "keywordResearch": {
+    "title": "ابزار تحقیق کلمات کلیدی",
+    "description": "کشف کلمات کلیدی با ارزش بالا برای استراتژی سئو شما."
+  },
+  "faqGenerator": {
+    "title": "سازنده اسکیمای سوالات متداول",
+    "description": "تولید کدهای اسکیما برای صفحه سوالات متداول جهت بهبود نمایش در نتایج جستجو."
   },
   "contentCreatorsTitle": "✍️ برای سازندگان محتوا",
   "contentCreatorsDesc": "ابزارهای متمرکز بر محتوا می‌توانند به بازدیدکنندگان شما کمک کنند تا محتوای بهتری ایجاد کنند و شما را به عنوان یک منبع ارزشمند ببینند.",
