--- a/src/i18n/ar/services.json
+++ b/src/i18n/ar/services.json
@@ -108,6 +108,10 @@
   "webDesignTitle": "خدمات تصميم المواقع",
   "webDevTitle": "تطوير الويب",
   "webDevDescription": "حلول ويب مخصصة",
+  "contentCreationTitle": "إنشاء المحتوى",
+  "contentCreationDescription": "استراتيجيات محتوى جذابة",
+  "linkBuildingTitle": "بناء الروابط",
+  "linkBuildingDescription": "تعزيز سلطة المجال",
   "faqTitle": "إجابات على أسئلتك الشائعة",
   "faqDescription": "هنا أجبنا على بعض الأسئلة الشائعة حول خدمات تحسين محركات البحث وتطوير الويب لدينا. إذا كان لديك أسئلة أخرى، يرجى الاتصال بنا.",
   "faq": {
