--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -11,6 +11,7 @@
   "happyClients": "Happy Clients",
   "yearsExperience": "Years Experience",
   "aboutOurServices": "About Our Services in",
+  "complementaryServices": "Complementary Services",
   "ourServices": "Our Services",
   "webDesignAndDevelopment": "Web Design & Development",
   "viewPortfolio": "View Portfolio",
