--- a/src/i18n/en/services.json
+++ b/src/i18n/en/services.json
@@ -87,6 +87,10 @@
   "webDesignTitle": "Website Design Services",
   "webDevTitle": "Web Development",
   "webDevDescription": "Custom web solutions",
+  "contentCreationTitle": "Content Creation",
+  "contentCreationDescription": "Engaging content strategies",
+  "linkBuildingTitle": "Link Building",
+  "linkBuildingDescription": "Boost domain authority",
   "faqTitle": "Answers to Your Frequently Asked Questions",
   "faqDescription": "Here we've answered some common questions about our SEO and web development services. If you have more questions, please contact us.",
   "ctaTitle": "Ready to Transform Your Business?",
