--- a/src/i18n/fa/common.json
+++ b/src/i18n/fa/common.json
@@ -11,6 +11,7 @@
   "happyClients": "مشتریان راضی",
   "yearsExperience": "سال تجربه",
   "aboutOurServices": "درباره خدمات ما در",
+  "complementaryServices": "خدمات مکمل",
   "ourServices": "خدمات ما",
   "webDesignAndDevelopment": "طراحی و توسعه وب",
   "viewPortfolio": "مشاهده نمونه کارها",
