--- a/src/i18n/fa/services.json
+++ b/src/i18n/fa/services.json
@@ -108,6 +108,10 @@
   "webDesignTitle": "خدمات طراحی سایت",
   "webDevTitle": "توسعه وب",
   "webDevDescription": "راهکارهای سفارشی وب",
+  "contentCreationTitle": "تولید محتوا",
+  "contentCreationDescription": "استراتژی‌های محتوای جذاب",
+  "linkBuildingTitle": "لینک‌سازی",
+  "linkBuildingDescription": "افزایش اعتبار دامنه",
   "faqTitle": "پاسخ به سوالات متداول شما",
   "faqDescription": "در اینجا به برخی از سؤالات رایج در مورد خدمات سئو و توسعه وب ما پاسخ داده‌ایم. اگر سؤالات بیشتری دارید، لطفاً با ما تماس بگیرید.",
   "ctaTitle": "آماده تحول کسب‌وکارتان هستید؟",
