fix(i18n): add missing portfolio technology translations and standardize tags

--- a/src/i18n/ar/portfolio.json
+++ b/src/i18n/ar/portfolio.json
@@ -15,7 +15,23 @@
     "php": "PHP",
     "mysql": "MySQL",
     "customTheme": "قالب مخصص",
-    "advancedSeo": "تحسين محركات البحث المتقدم"
+    "advancedSeo": "تحسين محركات البحث المتقدم",
+    "programmaticSeo": "سيو برمجي",
+    "woocommerce": "ووكومرس",
+    "customShippingPlugin": "إضافة شحن مخصصة",
+    "smsApi": "واجهة برمجة رسائل نصية",
+    "seoSchema": "سكيما سيو",
+    "php8.4": "PHP 8.4",
+    "localSeo": "سيو محلي",
+    "uxDesign": "تصميم تجربة المستخدم",
+    "migration": "ترحيل",
+    "gbpOptimization": "تحسين خرائط جوجل",
+    "emailAutomation": "أتمتة البريد الإلكتروني",
+    "schemaMarkup": "ترميز سكيما",
+    "customJs": "جافا سكريبت مخصص",
+    "restApis": "واجهات برمجة REST",
+    "technicalSeo": "سيو تقني",
+    "cro": "تحسين معدل التحويل"
   },
   "category": "الفئة",
   "challenge": "التحدي",
