--- a/src/i18n/en/portfolio.json
+++ b/src/i18n/en/portfolio.json
@@ -15,7 +15,23 @@
     "php": "PHP",
     "mysql": "MySQL",
     "customTheme": "Custom Theme",
-    "advancedSeo": "Advanced SEO"
+    "advancedSeo": "Advanced SEO",
+    "programmaticSeo": "Programmatic SEO",
+    "woocommerce": "WooCommerce",
+    "customShippingPlugin": "Custom Shipping Plugin",
+    "smsApi": "SMS API",
+    "seoSchema": "SEO Schema",
+    "php8.4": "PHP 8.4",
+    "localSeo": "Local SEO",
+    "uxDesign": "UX Design",
+    "migration": "Migration",
+    "gbpOptimization": "GBP Optimization",
+    "emailAutomation": "Email Automation",
+    "schemaMarkup": "Schema Markup",
+    "customJs": "Custom JS",
+    "restApis": "REST APIs",
+    "technicalSeo": "Technical SEO",
+    "cro": "CRO"
   },
   "category": "Category",
   "challenge": "Challenge",
