--- a/src/i18n/fa/portfolio.json
+++ b/src/i18n/fa/portfolio.json
@@ -15,7 +15,23 @@
     "php": "PHP",
     "mysql": "MySQL",
     "customTheme": "قالب اختصاصی",
-    "advancedSeo": "سئو پیشرفته"
+    "advancedSeo": "سئو پیشرفته",
+    "programmaticSeo": "سئو برنامه نویسی شده",
+    "woocommerce": "ووکامرس",
+    "customShippingPlugin": "افزونه حمل و نقل اختصاصی",
+    "smsApi": "وب‌سرویس پیامک",
+    "seoSchema": "اسکیما سئو",
+    "php8.4": "PHP 8.4",
+    "localSeo": "سئو محلی",
+    "uxDesign": "طراحی تجربه کاربری",
+    "migration": "مهاجرت",
+    "gbpOptimization": "بهینه‌سازی نقشه گوگل",
+    "emailAutomation": "اتوماسیون ایمیل",
+    "schemaMarkup": "نشانه‌گذاری اسکیما",
+    "customJs": "جاوااسکریپت اختصاصی",
+    "restApis": "REST APIs",
+    "technicalSeo": "سئو فنی",
+    "cro": "بهینه‌سازی نرخ تبدیل"
   },
   "category": "دسته‌بندی",
   "challenge": "چالش",
